--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,8 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
 
 :root {
-    --clr-main: #4b33a8;
-    --clr-main-light: #785ce9;
+    --clr-main: #b87b0c;
+    --clr-main-light: #b87c0c75;
     --clr-white: #ececec;
     --clr-gray: #e2e2e2;
     --clr-red: #961818;
